--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <div class="container portfolio">
 
             <div class="nk-box-3 text-center title-port">
-                <h2>Un poco de lo que hago =)</h2>
+                <h2>Un poco de lo que hago.</h2>
             
             </div>
             <!-- START: Filter -->
