--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <div class="row">
                     <div class="col-lg-6 push-lg-6">
                         <div class="bg-image bg-image-parallax"
-                            style="background-image: url('assets/images/ian.jpg');"></div>
+                            style="background-image: url('assets/images/ian.webp');"></div>
                         <div class="nk-gap-6"></div>
                         <div class="nk-gap-6"></div>
                         <div class="nk-gap-6"></div>
@@ -493,8 +493,8 @@
                   
                     <div class="col-lg-5">
                         <h3 class="h5 mb-20">Mi playlist</h3>
-                        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5tjNgdCOvPub0qER5nmWw0?utm_source=generator&theme=0" width="100%" height="210" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>                    </div>
-
+                        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5tjNgdCOvPub0qER5nmWw0?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    </div>
                         <div class="col-lg-4">
                         <h3 class="h5 mb-20">Redes</h3>
                         <a href="https://www.linkedin.com/in/ianvm/" target="_blank" class="fa fa-linkedin"></a>
@@ -506,7 +506,7 @@
                     </div>
 
                     <div class="col-lg-2">
-                        <h3 class="h5 mb-20"><span class="year">2022</span></h3>
+                        <h3 class="h5 mb-20"><span class="year">2023</span></h3>
                     </div>
                   
                 </div>
